# horus-assistant

./: .env.example  Readme.md  app.py  pyproject.toml  requirements.txt  vercel.json
agent/: ingestion.py  main.py
api/: app.py
