[tool.poetry]
name = "horus-assistant"
version = "0.1.0"
description = ""
authors = ["Darlington02 <darlingtonnnam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
langchain = "^0.3.10"
black = "^24.10.0"
openai = "^1.57.0"
pinecone-client = "^5.0.1"
langchain-pinecone = "^0.2.0"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.10"
firecrawl = "^1.6.3"
slack-sdk = "^3.33.5"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
